<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activities -->
    <string name="app_name">Mousoid</string>
    <string name="title_activity_main">Mousoid</string>
    <string name="title_activity_connection">Connection</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="wifi">Connect via WiFi</string>
    <string name="bluetooth">Connect via Bluetooth</string>
    <string name="netName">Network nick:</string>
    <string name="use">Use:</string>
    <string name="about_">About:</string>

    <!-- Buttons -->
    <string name="left">Left</string>
    <string name="middle">Middle</string>
    <string name="right">Right</string>
    <string name="down">Down</string>
    <string name="startscan">Start scan</string>
    <string name="connect">Connect</string>
    <string name="wifioff">Enable WiFi</string>
    <string name="ok">OK</string>
    <string name="run">Run</string>
    <string name="mute">Mute</string>
    <string name="lower">Lower</string>
    <string name="higher">Higher</string>
    <string name="reload">Reload</string>
    <string name="bback">Back</string>
    <string name="bfwd">Fwd</string>
    <string name="jump">Jump</string>
    <string name="blank">Blank</string>
    <string name="white">White</string>
    <string name="home">Home</string>
    <string name="pgup">PgUp</string>
    <string name="pgdn">PgDn</string>
    <string name="end">End</string>
    <string name="esc">Esc</string>
    <string name="space">Space</string>
    <string name="enter">Enter</string>
    <string name="cad">Ctrl+Alt+Del</string>
    <string name="win">Win</string>
    <string name="winp">Win+P</string>
    <string name="terminal">Terminal</string>
    <string name="dash">Dash</string>
    <string name="supw">Sup+W</string>
    <string name="sups">Sup+S</string>
    <string name="brdn">Brightness Dn</string>
    <string name="brup">Brightness Up</string>
    <string name="power">Power</string>

    <!-- Menu -->
    <string name="enablePresenter">Switch to presenter mode</string>
    <string name="enableGesture">Enable gesture presenter</string>
    <string name="connections">Connections</string>
    <string name="enableMouse">Switch to mouse mode</string>
    <string name="about">About</string>

    <!-- Settings -->
    <string name="touchpad">Touchpad</string>
    <string name="multitouch">Multitouch mode (scrolling)</string>
    <string name="showButtons">Show scroll buttons</string>
    <string name="touchpad_resolution">Resolution</string>
    <string name="presenter_layouts">Remote controls</string>
    <string name="arrow_switch">Arrow buttons</string>
    <string name="media_switch">Media control buttons</string>
    <string name="browser_switch">Browser control buttons</string>
    <string name="presenter_switch">Presenter control buttons</string>
    <string name="windows_switch">Windows specific buttons</string>
    <string name="linux_switch">Linux specific buttons</string>
    <string name="laptop_switch">Nootebook control buttons</string>
    <string name="editline_switch">Keys line</string>
    <string name="commandline_switch">Command line (on Linux)</string>
    <string name="gesture_presenter">Gesture presenter</string>
    <string name="gesture_command">Command</string>
    <string name="restore_fact">Restore factory settings</string>
    <string name="restore">Restore!</string>

    <!-- Toasts -->
    <string name="longclick">Please click long for this action!</string>
    <string name="connectionEstablished">Connection established</string>
    <string name="noHosts">No server host found</string>
    <string name="noAddress">Enter a hostname or an IP address</string>
    <string name="noDevice">Selected device is not supported</string>
    <string name="connectionFailed">Bad address or connection failed</string>
    
    <!-- About -->
    <string name="text_use">Touchpad mode:\nUse your phone like a touchpad of a notebook. You can choose single- or multitouch mode, too.\n\nPresenter mode:\nYour phone can be a platform and software independent remote control.\nYou can configure the several controllers and can run system commands in addition.\n\nGesture presenter:\nBoth in touchpad and presenter mode can be able to step forward by a gentle hand gesture to left. It can be turned on from menu.\n\nParticular settings can be found at menu.\n\nServer side software can be downloaded:\n--Kérnék egy itk-s címet, ha lehet--</string>
    <string name="text_about">Made for the\nPázmány Péter Chatolic University\n\nConsultant:\nTornai Kálmán (tornai.kalman@itk.ppke.hu)\nDesign and implementation:\nMóréh Tamás (morta@digitus.itk.ppke.hu)\n\nCopyright PPKE-ITK (itk.ppke.hu) 2012-2013\n\n</string>


</resources>